fix: update color variables and adjust overflow properties for better visibility in components

--- a/src/assets/scss/colors.scss
+++ b/src/assets/scss/colors.scss
@@ -15,6 +15,7 @@
   --bg-color: #1b1e26;
   --bg-color-light: #21242e;
   --bg-color-lighter: #272a35;
+  --font-color-darker: #56616a;
   --font-color-dark: #929ea8;
   --font-color: #b0bac2;
   --font-color-light: #e3e8ec;
